完成基本逻辑实现 添加所需样式

--- a/CustomCalendarTest/MainWindow.xaml
+++ b/CustomCalendarTest/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Calendar Margin="10"/>
+        <local:CustomCalendar Grid.Column="1" Margin="10"/>
     </Grid>
 </Window>
