--- a/CustomCalendarTest/Themes/Generic.xaml
+++ b/CustomCalendarTest/Themes/Generic.xaml
@@ -3,10 +3,34 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:CustomCalendarTest">
 
+    <Style x:Key="CalendarTitleButton" TargetType="Button">
+        <Setter Property="Padding" Value="10,5"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Background" Value="{x:Null}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <Grid>
+                            <ContentPresenter Margin="{TemplateBinding Padding}"
+                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            <Rectangle Fill="Black" Opacity="0"/>
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <Style TargetType="{x:Type local:CustomCalendar}">
         <Setter Property="BorderBrush" Value="Gray"/>
         <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="TitleButtonStyle" Value="{StaticResource CalendarTitleButton}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:CustomCalendar}">
@@ -19,17 +43,21 @@
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition/>
                                 </Grid.RowDefinitions>
-                                <Grid>
+                                <Grid Background="LightBlue">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
-                                    <Button Name="Part_BtnPrevious"/>
-                                    <Button Name="Part_BtnTitle"/>
-                                    <Button Name="Part_BtnNext"/>
+                                    <Button Name="Part_BtnPrevious" Style="{TemplateBinding TitleButtonStyle}" Grid.Column="0">
+                                        <Path Height="20" Width="15" Data="M13,2 L2,10 L13,18" Stroke="{Binding Foreground, ElementName=Part_BtnPrevious}" StrokeThickness="3"/>
+                                    </Button>
+                                    <Button Name="Part_BtnTitle" Style="{TemplateBinding TitleButtonStyle}" Grid.Column="1"/>
+                                    <Button Name="Part_BtnNext" Style="{TemplateBinding TitleButtonStyle}" Grid.Column="2">
+                                        <Path Height="20" Width="15" Data="M2,2 L13,10 L2,18" Stroke="{Binding Foreground, ElementName=Part_BtnPrevious}" StrokeThickness="3"/>
+                                    </Button>
                                 </Grid>
-                                <Grid Name="Part_Days">
+                                <Grid Name="Part_Days" Grid.Row="1">
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
                                         <RowDefinition/>
@@ -49,7 +77,7 @@
                                         <ColumnDefinition/>
                                     </Grid.ColumnDefinitions>
                                 </Grid>
-                                <Grid Name="Part_Mouths">
+                                <Grid Name="Part_Mouths" Grid.Row="1" Visibility="Hidden">
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
                                         <RowDefinition/>
@@ -63,7 +91,7 @@
                                         <ColumnDefinition/>
                                     </Grid.ColumnDefinitions>
                                 </Grid>
-                                <Grid Name="Part_Years">
+                                <Grid Name="Part_Years" Grid.Row="1" Visibility="Hidden">
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
                                         <RowDefinition/>
@@ -86,13 +114,43 @@
     </Style>
 
     <Style TargetType="{x:Type local:CustomCalendarButton}">
+        <Setter Property="Padding" Value="10"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:CustomCalendarButton}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
+                        <Grid>
+                            <ContentPresenter Margin="{TemplateBinding Padding}"
+                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            <Rectangle Fill="Black" Opacity="0"/>
+                        </Grid>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="BorderBrush" Value="Blue"/>
+                            <Setter Property="BorderThickness" Value="1"/>
+                        </Trigger>
+                        <Trigger Property="IsToday" Value="true">
+                            <Setter Property="Background" Value="LightBlue"/>
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="true">
+                            <Setter Property="Background" Value="Blue"/>
+                        </Trigger>
+                        <Trigger Property="IsInactive" Value="true">
+                            <Setter Property="Foreground" Value="Gray"/>
+                        </Trigger>
+                        <Trigger Property="IsBlackedOut" Value="true">
+                            <Setter Property="IsEnabled" Value="false"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Foreground" Value="LightGray"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
